--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,4 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+JustFix/JustFixIt/JustFixIt/obj/x64/Debug/View/Mechanic.g.i.cs
