--- a/.gitignore
+++ b/.gitignore
@@ -366,3 +366,8 @@ JustFix/JustFixIt/JustFixIt/obj/x64/Debug/View/Customer.xbf
 JustFix/JustFixIt/JustFixIt/obj/x64/Debug/View/Mechanic.g.cs
 JustFix/JustFixIt/JustFixIt/obj/x64/Debug/View/Mechanic.xbf
 JustFix/JustFixIt/JustFixIt/obj/x64/Debug/XamlSaveStateFile.xml
+JustFix/JustFixIt/JustFixIt/obj/x64/Debug/App.g.i.cs
+JustFix/JustFixIt/JustFixIt/obj/x64/Debug/MainPage.g.i.cs
+JustFix/JustFixIt/JustFixIt/obj/x64/Debug/View/Admin.g.i.cs
+JustFix/JustFixIt/JustFixIt/obj/x64/Debug/View/Customer.g.i.cs
+JustFix/JustFixIt/JustFixIt/obj/x64/Debug/View/Mechanic.g.i.cs
