--- a/.gitignore
+++ b/.gitignore
@@ -371,3 +371,7 @@ JustFix/JustFixIt/JustFixIt/obj/x64/Debug/MainPage.g.i.cs
 JustFix/JustFixIt/JustFixIt/obj/x64/Debug/View/Admin.g.i.cs
 JustFix/JustFixIt/JustFixIt/obj/x64/Debug/View/Customer.g.i.cs
 JustFix/JustFixIt/JustFixIt/obj/x64/Debug/View/Mechanic.g.i.cs
+JustFix/JustFixIt/.vs/JustFixIt/v16/.suo
+JustFix/JustFixIt/.vs/JustFixIt/v16/Server/sqlite3/storage.ide
+JustFix/JustFixIt/.vs/JustFixIt/v16/Server/sqlite3/storage.ide
+JustFix/JustFixIt/.vs/JustFixIt/v16/.suo
