--- a/.gitignore
+++ b/.gitignore
@@ -415,3 +415,4 @@ JustFix/JustFixIt/JustFixIt/obj/x64/Debug/XamlSaveStateFile.xml
 *.json
 *.cache
 *.xml
+JustFix/JustFixIt/.vs/JustFixIt/v16/Server/sqlite3/storage.ide
