--- a/.gitignore
+++ b/.gitignore
@@ -490,3 +490,4 @@ JustFix/JustFixIt/.vs/JustFixIt/v16/Server/sqlite3/storage.ide
 JustFix/JustFixIt/.vs/JustFixIt/v16/.suo
 .vs/slnx.sqlite
 .vs/JustFix/v16/.suo
+.vs/slnx.sqlite
