--- a/.gitignore
+++ b/.gitignore
@@ -491,3 +491,5 @@ JustFix/JustFixIt/.vs/JustFixIt/v16/.suo
 .vs/slnx.sqlite
 .vs/JustFix/v16/.suo
 .vs/slnx.sqlite
+JustFix/JustFixIt/.vs/JustFixIt/v16/.suo
+JustFix/JustFixIt/.vs/JustFixIt/v16/Server/sqlite3/storage.ide
