--- a/JustFix/JustFixIt/JustFixIt/JustFixIt.csproj
+++ b/JustFix/JustFixIt/JustFixIt/JustFixIt.csproj
@@ -133,18 +133,19 @@
     <Compile Include="Model\User.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="ViewModel\AdminViewModel.cs" />
+    <Compile Include="ViewModel\CreateCarViewModel.cs" />
     <Compile Include="ViewModel\CreateAccountViewModel.cs" />
     <Compile Include="ViewModel\CustomerViewModel.cs" />
     <Compile Include="ViewModel\LogInViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\MechanicViewModel.cs" />
-    <Compile Include="View\Admin.xaml.cs">
+    <Compile Include="View\Admin\Admin.xaml.cs">
       <DependentUpon>Admin.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\CreateAccount.xaml.cs">
+    <Compile Include="View\Customer\CreateAccount.xaml.cs">
       <DependentUpon>CreateAccount.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\Customer.xaml.cs">
+    <Compile Include="View\Customer\Customer.xaml.cs">
       <DependentUpon>Customer.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\LogIn.xaml.cs">
@@ -153,7 +154,7 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\Mechanic.xaml.cs">
+    <Compile Include="View\Mechanic\Mechanic.xaml.cs">
       <DependentUpon>Mechanic.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -164,6 +165,8 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\Logo wide.png" />
+    <Content Include="Assets\Logo.png" />
     <Content Include="DesignNotes\78055709_555067945055773_2867606121437200384_n.jpg" />
     <Content Include="DesignNotes\78244538_433874070878883_4335748581706170368_n.jpg" />
     <Content Include="DesignNotes\78247887_2748896485160661_6457030996465287168_n.jpg" />
@@ -185,15 +188,15 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="View\Admin.xaml">
+    <Page Include="View\Admin\Admin.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\CreateAccount.xaml">
+    <Page Include="View\Customer\CreateAccount.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\Customer.xaml">
+    <Page Include="View\Customer\Customer.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -205,7 +208,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="View\Mechanic.xaml">
+    <Page Include="View\Mechanic\Mechanic.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
