--- a/.gitignore
+++ b/.gitignore
@@ -493,3 +493,5 @@ JustFix/JustFixIt/.vs/JustFixIt/v16/.suo
 .vs/slnx.sqlite
 JustFix/JustFixIt/.vs/JustFixIt/v16/.suo
 JustFix/JustFixIt/.vs/JustFixIt/v16/Server/sqlite3/storage.ide
+JustFix/JustFixIt/.vs/JustFixIt/v16/.suo
+JustFix/JustFixIt/JustFixIt/obj/x64/Debug/JustFixIt.csprojAssemblyReference.cache
