--- a/JustFix/JustFixIt/JustFixIt/JustFixIt.csproj
+++ b/JustFix/JustFixIt/JustFixIt/JustFixIt.csproj
@@ -120,6 +120,8 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Model\Car.cs" />
+    <Compile Include="Model\Timetable.cs" />
+    <Compile Include="Model\TimetableCatalogue.cs" />
     <Compile Include="Model\UserTypes\AdminUser.cs" />
     <Compile Include="Model\UserTypes\CustomerUser.cs" />
     <Compile Include="Model\UserTypes\MechanicUser.cs" />
