--- a/JustFix/JustFixIt/JustFixIt/JustFixIt.csproj
+++ b/JustFix/JustFixIt/JustFixIt/JustFixIt.csproj
@@ -120,7 +120,8 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Model\Car.cs" />
-    <Compile Include="Model\Task.cs" />
+    <Compile Include="Model\Timetable.cs" />
+    <Compile Include="Model\TimetableCatalogue.cs" />
     <Compile Include="Model\UserTypes\AdminUser.cs" />
     <Compile Include="Model\UserTypes\CustomerUser.cs" />
     <Compile Include="Model\UserTypes\MechanicUser.cs" />
@@ -228,7 +229,7 @@
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\WindowsXaml\v$(VisualStudioVersion)\Microsoft.Windows.UI.Xaml.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
